# study_rag

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  investigate.py  justfile  pyproject.toml  temp_check.py  verify_delete.py  verify_delete2.py
configs/: embeddings.yaml  knowledge_bases.yaml  llamaindex.yaml  llm.yaml  reranker.yaml  retrieval.yaml  vector_store.yaml
data/: docs_index.json
data/test_documents/: 语义测试.txt  跨领域测试.txt
docker/: .dockerignore  Dockerfile  docker-compose.yml  entrypoint.sh
docs/: configuration.md  deployment.md
docs/superpowers/plans/: 2026-06-22-document-upload-chunking.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.tsx  types.ts
frontend/src/components/: AddDocumentDialog.tsx  AddDocumentDrawer.tsx  AddKBDialog.tsx  AuthPromptDialog.tsx  BatchAddDocumentDialog.tsx  ChunkPreviewPanel.tsx  ChunksDrawer.tsx  DocumentDetailDialog.tsx  JobProgressRow.tsx  KbFormModal.tsx  MainLayout.tsx  ModelConfigDialog.tsx
frontend/src/hooks/: useJobPolling.ts  (+1 more)
scripts/: dev.ps1  inspector.ps1
src/study_rag/: __init__.py  app.py  mcp_standalone.py  settings.py
tests/: conftest.py  mypy_output.txt  test_admin_upload.py  test_config_store.py  test_document_reader.py  test_manager_delete.py  test_manager_list_chunks.py  test_manager_upload.py  test_mcp_tools.py  test_parser_registry.py  test_reranker_http.py  test_reranker_on_demand.py  test_retrieval.py  test_search_reranker_override.py  test_smoke.py  test_vector_store_query.py  verify_admin_enhanced.py  verify_admin_ui.py  verify_chunks_e2e.py  verify_circuit_breaker.py  verify_embedding.py  verify_http_reranker.py  verify_kb_crud.py  verify_kb_out.txt  verify_llamaindex.py  verify_manager_resilience.py  verify_mcp_enhanced.py  verify_mcp_resources.py  verify_mcp_transport.py  verify_observability.py  verify_ratelimit.py  verify_reranker.py  verify_reranker_e2e.py  verify_upload_e2e.py  verify_vector_store.py
tests/jobs/: __init__.py  test_api.py  test_manager.py  test_models.py  test_pipeline.py
(+102 files in other folders)
